@@ -1,3 +1,3 @@
-EBUILD xbmc-9999.ebuild 5405 RMD160 2028874c0d901136f455aa8c1513605fdc904f0c SHA1 34e20746c9600a1cd0555a4e9ecc42024bd6157a SHA256 cc829babf7f289160ac569300282221548538910b5034b19da6a8f56b13b72ee
-MISC ChangeLog 874 RMD160 74e2f38a8d4ee9102d4d621e59d76711d12e66e5 SHA1 8869b6349603fe116b0034a5e862908bd2bc7b7c SHA256 ec832f6803d81b64d846ab8ddc16a0a363009b146a3f8d9ef5e9916d9bd9caf6
+EBUILD xbmc-9999.ebuild 5355 RMD160 579ecdd74ade4434bbcc68f88756098d73165e6a SHA1 a2df22e23ddc4749a4b92d815174f5020b91006b SHA256 605619e39d7f6d0471226fa76dda32d06fb22981bcff844897d456d390c8f5e3
+MISC ChangeLog 989 RMD160 48a541b39abee893a039037aad176e5d7563ece5 SHA1 a938ae1cfc4867fbc1132bbb74cd569c19876e15 SHA256 7e22c58227898ce982ef5181964e87a26f78ed8ab92ef24781403df53ebe2509
 MISC metadata.xml 628 RMD160 beddf7fd3afcdc89142c59ea432e5475e0441c70 SHA1 726e050418da10f47de0c7eaff132bf22213b0b1 SHA256 ac1449664c3ff0d80be9965114af13dd1b29cb4582a18e4f6aeac7afc4e6cf8d
